Merged SQL server branch into v0.6.1-rc2