@@ -1,4 +1,6 @@
-#Zeppelin
+# Zeppelin for SQL Server
+
+This fork of Apache Zeppelin is focused on specific support for SQL Server and SQL Azure. Please refer to Apache Zeppelin main page for general information on the project:
 
 **Documentation:** [User Guide](http://zeppelin.apache.org/docs/latest/index.html)<br/>
 **Mailing Lists:** [User and Dev mailing list](http://zeppelin.apache.org/community.html)<br/>
@@ -17,9 +19,14 @@ Core feature:
 
 To know more about Zeppelin, visit our web site [http://zeppelin.apache.org](http://zeppelin.apache.org)
 
+## Project Status
+
+[![Build Status](https://travis-ci.org/yorek/incubator-zeppelin.svg?branch=master)](https://travis-ci.org/yorek/incubator-zeppelin)
+
 ## Requirements
- * Git 
- * Java 1.7
+ * Git
+ * Java 1.8
+ * Tested and Build on Ubuntu 16.04 LTS
  * Tested on Mac OSX, Ubuntu 14.X, CentOS 6.X, Windows 7 Pro SP1
  * Maven (if you want to build from the source code)
  * Node.js Package Manager (npm, downloaded by Maven during build phase)
@@ -33,15 +40,27 @@ If you don't have requirements prepared, install it.
 ```
 sudo apt-get update
 sudo apt-get install git
-sudo apt-get install openjdk-7-jdk
+sudo apt-get install openjdk-8-jdk
+sudo apt-get install nodejs
 sudo apt-get install npm
 sudo apt-get install libfontconfig
+
+# get Microsoft JDBC
+curl -L "https://download.microsoft.com/download/0/2/A/02AAE597-3865-456C-AE7F-613F99F850A8/sqljdbc_6.0.6629.101_enu.tar.gz" | tar xz
+```
+
+### Get Source Code
+
+Download code from GitHub. From a terminal shell:
+
+```
+git clone https://github.com/yorek/incubator-zeppelin.git zeppelin-sqlserver
 ```
 
 #### Proxy settings (optional)
 If you are behind a corporate Proxy with NTLM authentication you can use [Cntlm Authentication Proxy](http://cntlm.sourceforge.net/) .
 
-Before build start, run these commands from shell. 
+Before build start, run these commands from shell.
 ```
 export http_proxy=http://localhost:3128
 export https_proxy=http://localhost:3128
@@ -66,11 +85,11 @@ git config --global --unset https.proxy
 git config --global --unset url."http://".insteadOf
 ```
 
-_Notes:_ 
+_Notes:_
  - If you are on Windows replace `export` with `set` to set env variables
  - Replace `localhost:3128` with standard pattern `http://user:pwd@host:port`
  - Git configuration is needed because Bower use it for fetching from GitHub
- 
+
 #### Install maven
 ```
 wget http://www.eu.apache.org/dist/maven/maven-3/3.3.3/binaries/apache-maven-3.3.3-bin.tar.gz
@@ -79,16 +98,32 @@ sudo ln -s /usr/local/apache-maven-3.3.3/bin/mvn /usr/local/bin/mvn
 ```
 
 _Notes:_
- - Ensure node is installed by running `node --version`  
+ - Ensure node is installed by running `node --version`
  - Ensure maven is running version 3.1.x or higher with `mvn -version`
  - Configure maven to use more memory than usual by `export MAVEN_OPTS="-Xmx2g -XX:MaxPermSize=1024m"`
 
 ### Build
-If you want to build Zeppelin from the source, please first clone this repository, then:
 
 ```
-mvn clean package -DskipTests [Options]
+export CLASSPATH=~/sqljdbc_6.0/enu/sqljdbc41.jar
+export MAVEN_OPTS="-Xmx2g -XX:MaxPermSize=1024m"
+
+mvn install:install-file -Dfile=~/sqljdbc_6.0/enu/sqljdbc41.jar -DgroupId=com.microsoft.sqlserver -DartifactId=sqljdbc41 -Dversion=4.1  -Dpackaging=jar -DgeneratePom=true
+
+cd ~/zeppelin-sqlserver
+
+mvn clean package -DskipTests
+
+cp ./conf/zeppelin-site.xml.template ./conf/zeppelin-site.xml
+cp ./conf/zeppelin-env.sh.template ./conf/zeppelin-env.sh
+
+cp ~/sqljdbc_6.0/enu/sqljdbc41.jar ~/zeppelin-sqlserver/zeppelin-interpreter/target/lib
 ```
+
+Please note that the above commands already contains anything needed in order to make Zeppelin work with SQL Server.
+If you want to have more information on the SQL Server interpreter, you can take a look at the readme in the ```sqlserver``` folder:
+
+[SQL Server Interpreter for Apache Zeppelin](https://github.com/yorek/incubator-zeppelin/blob/master/sqlserver/README.md)
 
 Each Interpreter requires different Options.
 
@@ -98,7 +133,6 @@ Each Interpreter requires different Options.
 To build with a specific Spark version, Hadoop version or specific features, define one or more of the following profiles and options:
 
 ##### `-Pspark-[version]`
-
 Set spark major version
 
 Available profiles are
@@ -298,7 +332,7 @@ To build a distribution with specific profiles, run:
 mvn clean package -Pbuild-distr -Pspark-1.5 -Phadoop-2.4 -Pyarn -Ppyspark
 ```
 
-The profiles `-Pspark-1.5 -Phadoop-2.4 -Pyarn -Ppyspark` can be adjusted if you wish to build to a specific spark versions, or omit support such as `yarn`.  
+The profiles `-Pspark-1.5 -Phadoop-2.4 -Pyarn -Ppyspark` can be adjusted if you wish to build to a specific spark versions, or omit support such as `yarn`.
 
 The archive is generated under _`zeppelin-distribution/target`_ directory
 
@@ -314,3 +348,51 @@ mvn verify -P using-packaged-distr
 ```
 
 [![Analytics](https://ga-beacon.appspot.com/UA-45176241-4/apache/zeppelin/README.md?pixel)](https://github.com/igrigorik/ga-beacon)
+
+### Create and configure the Interpreter
+
+Click on Interpreter menu item so that Zeppelin will show you the Interpreters page.
+
+#### Change and existing configuration
+
+Scroll to the bottom of the page to find the ```tsql``` interpreter. Click on the ```edit``` button on the right and fill the properties with the values correct for the SQL Server or SQL Azure instance you'd like to connect to. The property ```sqlserver.driver.name``` is already set to the correct value. Change it *only* if you really know what you're doing.
+
+the ```sqserver.url``` parameter is more or less the equivalent of a connection string in .NET. To connect to a local SQL Server it will be something like:
+
+```
+jdbc:sqlserver://<your-local-sql-server-address>:1433
+```
+
+to connect to SQL Azure it will be similar to:
+
+```
+jdbc:sqlserver://<your-sql-azure-server-name>.database.windows.net:1433
+```
+
+Now click on save and now you're ready to use the configured SQL Server interpreter in a Notebook.
+
+#### Create a new configuration
+
+If you want to create a new SQL Server interpreter to connect to a different SQL Server, just click on the ```+ Create``` button on the top right at the beginning of the page. Type a name for your interpreter, for example, "SQL Server" and from the interpreter drop-down menu select the ```tsql``` item. Now you can follow the same procedure described above to configure your new interpreter.
+
+### Creating a Notebook
+
+On the ```Notebook``` menu, select the ```+ Create new note``` item. Give the notebook the name you prefer, for example "SQL Azure".
+
+Now you have to choose which interpreter you want to use among all the ones available. To do so, click on the gear icon on the right, near the ```default``` button.
+The selected interpreter, which will be available to use in your notebook, will be in light blue. The deselected one will be shown in light gray. You should have all the interpreter already selected. If you want to change something, click one the interpreter you want to enable or disable to do so. Just make sure that the ```tsql``` interpreter is selected. Save your choices by pressing on the ```Save``` button.
+
+### Using a Notebook
+
+Now click on the white box on the top, and you'll be able to write your first query. Something like:
+
+```
+%tsql
+select @@version
+```
+
+will be enough to make sure that SQL Server interpreter is working correctly. The first line tells
+Zeppelin that you're going to send something that has to be interpreted by the SQL Server Interpreter. The second one simply ask to SQL Server to return server name and version info.
+Tu run the code, just hit ```Shift + Enter```
+
+Welcome to the Apache Zeppelin world!
